js/js.translator/testData/incremental/invalidation/reifiedInlineFunctionBodyChange/lib1/l1.1.kt
inline fun <reified T> marker(value: Any): String = if (value is T) "A1" else "BAD"
